<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_settings"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_name"/>

    <EditText
        android:hint="Mitchell Hayward"
        android:id="@+id/fragment_settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionLabel="Done"
        android:singleLine="true"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_id"/>

    <EditText
        android:hint="1092962"
        android:id="@+id/settings_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionLabel="Done"
        android:singleLine="true"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_email"/>

    <EditText
        android:hint="mlh035@student.usc.edu.au"
        android:id="@+id/settings_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionLabel="Done"
        android:singleLine="true"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_gender"/>

    <Spinner
        android:id="@+id/settings_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/settings_arrays">
    </Spinner>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_comment" />

    <EditText
        android:hint="Write Your Comment Here"
        android:id="@+id/settings_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionLabel="Done"
        android:singleLine="true"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/settings_done"
            android:layout_height="wrap_content"
            android:layout_width="368dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:text="Finish Editing"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>